feat: implement Spring Security configuration with JWT authentication and CORS support alongside database properties